--- a/about.html
+++ b/about.html
@@ -13,24 +13,8 @@
     <h1>About Us</h1>
     <br>
     <p>
-        TEPS is a research and decoding community focused on solving The End Project (TEP), a cryptic multimedia experience created by an external entity known as "The Keeper."   
-    </p>
-    <p>    
-        We analyze media, decode ciphers, and collaborate to uncover the meaning and structure behind TEP's signals.
-    </p>
-    <br>
-    <p>
-        The TEP Cipher Translator was created to assist in decoding the various ciphers used in TEP. It provides a user-friendly interface for translating text and offers resources for further exploration of cryptography.
-    </p>
-    <p>
-        We welcome contributions, feedback, and collaboration from anyone interested in the world of cryptology.
-    </p>
-    <p>
-        If you have any questions or would like to get involved, please reach out to us.
-    </p>    
-    <p>
-        The End Project Solvers @ <a href="https://discord.com/invite/eJGpsbpM86">Discord</a>
-    </p>
+        The TEP Cipher Translator was created to assist in decoding the various ciphers used in The End Project (TEP). It provides a user-friendly interface for translating text and offers resources for further exploration of cryptography.
+    </p>  
     <br>
     <p>
         To learn more about The End Project visit: <a href="https://theendproject.xyz/">theendproject.xyz</a>
@@ -47,7 +31,6 @@
     </div>
 
     <footer>
-        <!--<p>The End Project Solvers: <a href="https://discord.com/invite/eJGpsbpM86">Discord</a></p>-->
         <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
         <!--<p>Version 1.0 | Contact: <a href="mailto:zs6avz@proton.me">zs6avz@proton.me</a></p>-->
     </footer>
