--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Thumbnail -->
     <meta property="og:title" content="TranslatorTEP">
     <meta property="og:description" content="A cryptography tool for translation and encoding.">
-    <meta property="og:image" content="https:tepcipher.online/Fox-Thumbnail.png">
+    <meta property="og:image" content="https://tepcipher.online/Fox-Thumbnail.png">
     <meta property="og:url" content="https://tepcipher.online/">
     <meta name="twitter:card" content="summary_large_image">
 
