--- a/index.html
+++ b/index.html
@@ -8,16 +8,24 @@
 
     <!-- Favicon Links -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <!-- Thumbnail -->
+    <meta name="description" content="A cryptography tool for translation and encoding.">
+
+    <!-- Open Graph / Facebook / Discord -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tepcipher.online/">
     <meta property="og:title" content="TranslatorTEP">
     <meta property="og:description" content="A cryptography tool for translation and encoding.">
     <meta property="og:image" content="https://tepcipher.online/Fox-Thumbnail.png">
-    <meta property="og:url" content="https://tepcipher.online/">
+
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="TranslatorTEP">
+    <meta name="twitter:description" content="A cryptography tool for translation and encoding.">
+    <meta name="twitter:image" content="https://tepcipher.online/Fox-Thumbnail.png">
 
     <script src="script.js" defer></script>
 </head>
