--- a/about.html
+++ b/about.html
@@ -27,6 +27,8 @@
             <a href="about.html">About</a>
             <a href="decrypt.html">Encrypt/Decrypt</a>
             <a href="cryptography.html">Cryptography</a>
+            <a href="blog.html">Blog</a>
+            <a href="echoes.html">The Threshold of Echoes</a>
         </div>
     </div>
 
