--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@ style="position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             <a href="about.html">About</a>
             <a href="decrypt.html">Encrypt/Decrypt</a>
             <a href="cryptography.html">Cryptography</a>
+            <a href="blog.html">Blog</a>
+            <a href="echoes.html">The Threshold of Echoes</a>
         </div>
     </div>
 
