--- a/decrypt.html
+++ b/decrypt.html
@@ -146,25 +146,24 @@
             <h3>Base64 Decryption</h3>
             <textarea class="base64-decryption-input" placeholder="Enter Base64 encrypted image..."></textarea>
             <button onclick="decryptBase64Image()">Decrypt</button>
-            <button id="clearBase64ImageFieldsBtn">Clear</button>
             <img id="base64-image-output" alt="Decrypted Image" style="display: none;">
             <a id="base64-download-link" style="display: none;">Download Decrypted Image</a>
         </div>
     </div>
 
-    <!-- Audio Encryption & Decryption
+    <!-- Audio Encryption & Decryption-->
     <div class="method">
         <h2>Audio Encryption & Decryption</h2>
         <div class="sub-method">
             <h3>AES Audio Encryption</h3>
             <input type="file" class="aes-audio-input">
-            <input type="text" class="aes-audio-key" placeholder="Enter AES key">
+            <input type="text" class="aes-audio-key" placeholder="Enter key">
             <button onclick="encryptAESAudio()">Encrypt</button>
             <textarea class="aes-encrypted-output" readonly placeholder="Encrypted audio data..."></textarea>
 
             <h3>AES Audio Decryption</h3>
             <textarea class="aes-audio-input-decrypt" placeholder="Enter AES encrypted audio data..."></textarea>
-            <input type="text" class="aes-audio-key-decrypt" placeholder="Enter AES key">
+            <input type="text" class="aes-audio-key-decrypt" placeholder="Enter key">
             <button onclick="decryptAESAudio()">Decrypt</button>
             <audio id="aes-audio-output" controls></audio>
             <a id="aes-audio-download-link" style="display: none;">Download Decrypted Audio</a>
@@ -182,7 +181,7 @@
             <button onclick="decryptRSAAudio()">Decrypt</button>
             <audio id="rsa-audio-output" controls></audio>
             <a id="rsa-audio-download-link" style="display: none;">Download Decrypted Audio</a>
-        </div>-->
+        </div>
     </div>
 
     <!-- Name to RGB Color Converter -->
@@ -208,10 +207,13 @@
             <a href="about.html">About</a>
             <a href="decrypt.html">Encrypt/Decrypt</a>
             <a href="cryptography.html">Cryptography</a>
+            <a href="blog.html">Blog</a>
+            <a href="echoes.html">The Threshold of Echoes</a>
         </div>
     </div>
     <footer>
         <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
     </footer>
 </body>
+</html>
 </html>
