--- a/about.html
+++ b/about.html
@@ -13,8 +13,16 @@
     <h1>About Us</h1>
     <br>
     <p>
-        The TEP Cipher Translator was created to assist in decoding the various ciphers used in The End Project (TEP). It provides a user-friendly interface for translating text and offers resources for further exploration of cryptography.
-    </p>  
+        The TEP Cipher Translator was developed for solvers by solvers. It is an independent tool that was created out of curiosity and collaboration of solvers inspired by The End Project (TEP). While this site is inspired by the cryptographic challenges and narrative depth of TEP, it is not officially affiliated with theendproj.xyz or its creators.
+    </p>
+    <br>
+    <p>The translator provides a user-friendly interface for decoding the various cipher systems encountered throughout TEP. However, it offers more than just decoding. This platform also includes:</p>
+    <br>
+    <p>
+        <ul>Interactive puzzles that reflect the logic of TEP, encouraging users to enhance their skills and uncover new layers of meaning.</ul>
+        <ul>A blog that delves into the cryptographic, philosophical, and narrative themes embedded in TEP, covering topics from cipher construction to symbolic analysis and community lore.</ul>
+        <ul>Resources and references for those interested in exploring cryptography, steganography, and puzzle design in greater depth.</ul>
+    </p>
     <br>
     <p>
         To learn more about The End Project visit: <a href="https://theendproject.xyz/">theendproject.xyz</a>
