--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <h1>About Us</h1>
     <br>
     <p>
-        The TEP Cipher Translator was developed for solvers by solvers. It is an independent tool that was created out of curiosity and collaboration of solvers inspired by The End Project (TEP). While this site is inspired by the cryptographic challenges and narrative depth of TEP, it is not officially affiliated with theendproj.xyz or its creators.
+        The TEP Cipher Translator was developed for solvers by solvers. It is an independent tool that was created out of curiosity and collaboration of solvers inspired by The End Project (TEP). While this site is inspired by the cryptographic challenges and narrative depth of TEP, it is not officially affiliated with <a href="https://theendproject.xyz/">theendproject.xyz</a> or its creators.
     </p>
     <br>
     <p>The translator provides a user-friendly interface for decoding the various cipher systems encountered throughout TEP. However, it offers more than just decoding. This platform also includes:</p>
