--- a/about.html
+++ b/about.html
@@ -19,9 +19,11 @@
     <p>The translator provides a user-friendly interface for decoding the various cipher systems encountered throughout TEP. However, it offers more than just decoding. This platform also includes:</p>
     <br>
     <p>
-        <ul>Interactive puzzles that reflect the logic of TEP, encouraging users to enhance their skills and uncover new layers of meaning.</ul>
-        <ul>A blog that delves into the cryptographic, philosophical, and narrative themes embedded in TEP, covering topics from cipher construction to symbolic analysis and community lore.</ul>
-        <ul>Resources and references for those interested in exploring cryptography, steganography, and puzzle design in greater depth.</ul>
+    <ul>
+        <li>Interactive puzzles that reflect the logic of TEP, encouraging users to enhance their skills and uncover new layers of meaning.</li>
+        <li>A blog that delves into the cryptographic, philosophical, and narrative themes embedded in TEP, covering topics from cipher construction to symbolic analysis and community lore.</li>
+        <li>Resources and references for those interested in exploring cryptography, steganography, and puzzle design in greater depth.</li>
+    </ul>
     </p>
     <br>
     <p>
