--- a/red.html
+++ b/red.html
@@ -3,9 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <title>Video Steganography Tool</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
+    <!-- Favicon Links -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <script src="script.js" defer></script>
 </head>
 <body>
+  <div class="dropdown">
+        <button class="dropbtn">⨀Ξ〄⋑</button>
+        <div class="dropdown-content">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="decrypt.html">Encrypt/Decrypt</a>
+            <a href="red.html">Video Steganography</a>
+            <a href="cryptography.html">Cryptography</a>
+            <a href="blog.html">Blog</a>
+            <a href="echoes.html">The Threshold of Echoes</a>
+        </div>
+    </div>
+
   <h1>Video Steganography Tool</h1>
 
   <!-- Upload Section -->
@@ -26,6 +45,8 @@
     <label>Green <input type="range" id="greenGain" min="0" max="2" step="0.01" value="1"></label>
     <label>Blue <input type="range" id="blueGain" min="0" max="2" step="0.01" value="1"></label>
     <label>Contrast <input type="range" id="contrast" min="0" max="2" step="0.01" value="1"></label>
+    <!--Start Analysis Button-->
+  <button id="startAnalysisBtn">Start Analysis</button>
   </section>
 
   <!--<label>
@@ -38,19 +59,23 @@
   </select>
 </label>-->
 
-<button id="startAnalysisBtn">Start Analysis</button>
+<!--Please Wait message-->
+<!-- Loading Overlay -->
+<div id="loadingDiv" class="loading-sticky" style="display: none;">
+    <div class="spinner"></div>
+    <p id="loadingText">Processing frames, please wait...</p>
+  </div>
+</div>
 
-  <!-- Output Preview -->
+<!-- Output Preview -->
   <section>
     <h2>Output Preview</h2>
     <canvas id="canvas"></canvas>
     <button id="playBtn">Play</button>
     <button id="pauseBtn">Pause</button>
     <button id="replayBtn">Replay & Analyse</button>
-    <div id="loadingDiv" style="display:none;">Processing frames, please wait...</div>
+    
   </section>
-
-  
 
   <!-- Forensics/Steganography Panel
   <section>
@@ -88,6 +113,7 @@
   <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
 </body>
 </html>
+
 
 
 
