--- a/cryptography.html
+++ b/cryptography.html
@@ -59,6 +59,7 @@
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="decrypt.html">Encrypt/Decrypt</a>
+            <a href="red.html">Video Steganography</a>
             <a href="cryptography.html">Cryptography</a>
             <a href="blog.html">Blog</a>
             <a href="echoes.html">The Threshold of Echoes</a>
