--- a/red.html
+++ b/red.html
@@ -111,6 +111,9 @@
   <!-- JS Modules -->
   <script type="module" src="main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
+  <footer>
+        <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
+    </footer>
 </body>
 </html>
 
