--- a/about.html
+++ b/about.html
@@ -8,22 +8,14 @@
     <script src="script.js" defer></script>
 </head>
 <body class="about-page">
-    <img src="/foxy.png" class="center-image" alt=""
+    <img src="/fennfox.png" class="center-image" alt=""
     style="width: 150px; height: auto;">
-    <h1>About Us</h1>
+    <h1>About</h1>
     <br>
     <p>
-        The TEP Cipher Translator was developed for solvers by solvers. It is an independent tool that was created out of curiosity and collaboration of solvers inspired by The End Project (TEP). While this site is inspired by the cryptographic challenges and narrative depth of TEP, it is not officially affiliated with <a href="https://theendproject.xyz/">theendproject.xyz</a> or its creators.
-    </p>
-    <br>
-    <p>The translator provides a user-friendly interface for decoding the various cipher systems encountered throughout TEP. However, it offers more than just decoding. This platform also includes:</p>
-    <br>
-    <p>
-    <ul>
-        <li>Interactive puzzles that reflect the logic of TEP, encouraging users to enhance their skills and uncover new layers of meaning.</li>
-        <li>A blog that delves into the cryptographic, philosophical, and narrative themes embedded in TEP, covering topics from cipher construction to symbolic analysis and community lore.</li>
-        <li>Resources and references for those interested in exploring cryptography, steganography, and puzzle design in greater depth.</li>
-    </ul>
+        The TEP Cipher Translator is an independent, community-built tool created by solvers, for solvers, with no official affiliation to The End Project (TEP) beyond a shared fascination with its puzzles. Designed to support those navigating the cryptic terrain of TEP, the site offers a suite of utilities tailored to the decoding challenges frequently encountered in the project.
+
+Core features include a growing library of encryption and decryption methods commonly used in TEP clues, a video steganography tool that analyzes frames and extracts least significant bits (LSB), and a curated collection of cryptography resources, including links to courses, external tools, and learning materials. The platform also hosts a blog that reflects on the symbolic, thematic, and technical dimensions uncovered during the solving process.
     </p>
     <br>
     <p>
@@ -38,13 +30,13 @@
             <a href="decrypt.html">Encrypt/Decrypt</a>
             <a href="cryptography.html">Cryptography</a>
             <a href="blog.html">Blog</a>
-            <a href="echoes.html">The Threshold of Echoes</a>
+            <!--<a href="echoes.html">The Threshold of Echoes</a>-->
         </div>
     </div>
 
     <footer>
         <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
-        <!--<p>Version 1.0 | Contact: <a href="mailto:zs6avz@proton.me">zs6avz@proton.me</a></p>-->
+        <!--<p>Version 1.1 | Contact: <a href="aeonlogic@protonmail.com">Aeon Logic</p>-->
     </footer>
     
 </body>
