--- a/blog.html
+++ b/blog.html
@@ -13,8 +13,9 @@
     <script src="script.js" defer></script>
 </head>
 <body class="blog-page">
-    <h1>ϟ⌇◎⌁</h1>
-    <h2>Updates & Insights</h2>
+    <h1>ϟ⌇◎⌁</h1><img src="/fennfox.png" class="center-image" alt=""
+    style="width: 150px; height: auto;">
+    <h2>Insights</h2>
     <h3>This blog reflects interpretive and speculative insights based on the themes examined
         throughout the solving of The End Project. From the symbols of Enlightenment logic to
         the revelations of Romantic introspection, from fugues and formulas to mythopoetic visions
@@ -27,10 +28,9 @@
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="decrypt.html">Encrypt/Decrypt</a>
-            <a href="red.html">Video Steganography</a>
             <a href="cryptography.html">Cryptography</a>
             <a href="blog.html">Blog</a>
-            <a href="echoes.html">The Threshold of Echoes</a>
+            <!--<a href="echoes.html">The Threshold of Echoes</a>-->
         </div>
     </div>
 
