--- a/cryptography.html
+++ b/cryptography.html
@@ -62,12 +62,12 @@
             <a href="red.html">Video Steganography</a>
             <a href="cryptography.html">Cryptography</a>
             <a href="blog.html">Blog</a>
-            <a href="echoes.html">The Threshold of Echoes</a>
+            <!--<a href="echoes.html">The Threshold of Echoes</a>-->
         </div>
     </div>
     <footer>
         <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
-        <!--<p>Version 1.0 | Contact: <a href="mailto:zs6avz@proton.me">zs6avz@proton.me</a></p>-->
+        <!--<p>Version 1.1 | Contact: <a href="mailto:aeonlogic@protonmail.com">Aeon Logic</a></p>-->
     </footer>
 </body>
 </html>
