--- a/decrypt.html
+++ b/decrypt.html
@@ -184,7 +184,7 @@
         </div>
     </div>
 
-    <!-- Name to RGB Color Converter -->
+    <!-- Name to RGB Color Converter
     <div class="method name-to-color-section">
         <h2>Name to RGB Color Converter</h2>
         <input type="text" id="firstName" placeholder="First Name" />
@@ -197,7 +197,7 @@
         <div id="outputBox" class="colorBox"></div>
         <p id="outputRGB"></p>
         <p id="outputName"></p>
-    </div>
+    </div>-->
 
     <!-- Footer and Navigation -->
     <div class="dropdown">
@@ -206,15 +206,13 @@
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="decrypt.html">Encrypt/Decrypt</a>
-            <a href="red.html">Video Steganography</a>
             <a href="cryptography.html">Cryptography</a>
             <a href="blog.html">Blog</a>
-            <a href="echoes.html">The Threshold of Echoes</a>
+            <!--<a href="echoes.html">The Threshold of Echoes</a>-->
         </div>
     </div>
     <footer>
         <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
     </footer>
 </body>
-</html>
 </html>
