--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+x<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -36,7 +36,7 @@ style="position: fixed; top: 0; left: 0; width: 100%; height: 100%;
     display: flex; flex-direction: column; justify-content: center; align-items: center;
     background-size: cover; background-position: center; background-repeat: no-repeat;
     background-color: rgb(120, 120, 120); z-index: 10; opacity: 1; transition: z-index 0.3s, opacity 0.3s;">
-<img src="/foxy.png" class="center-image" alt=""
+<img src="/fennfox.png" class="center-image" alt=""
     style="width: 150px; height: auto;">
     <textarea id="foxInput" placeholder="..." class="fox-box"
     style="width: 20%; height: 30px; font-size: large; color: rgb(225, 225, 225);
@@ -65,7 +65,7 @@ style="position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             <a href="red.html">Video Steganography</a>
             <a href="cryptography.html">Cryptography</a>
             <a href="blog.html">Blog</a>
-            <a href="echoes.html">The Threshold of Echoes</a>
+            <!--<a href="echoes.html">The Threshold of Echoes</a>-->
         </div>
     </div>
 
@@ -87,7 +87,7 @@ style="position: fixed; top: 0; left: 0; width: 100%; height: 100%;
     <!-- Footer Section -->
     <footer>
         <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
-        <!--<p>Version 1.0 | Contact: <a href="mailto:zs6avz@proton.me">zs6avz@proton.me</a></p>-->
+        <!--<p>Version 1.1 | Contact: <a href="mailto:aeonlogic@protonmail.com">Aeon Logic</a></p>-->
     </footer>
 </body>
 </html>
