--- a/red.html
+++ b/red.html
@@ -21,11 +21,12 @@
             <a href="red.html">Video Steganography</a>
             <a href="cryptography.html">Cryptography</a>
             <a href="blog.html">Blog</a>
-            <a href="echoes.html">The Threshold of Echoes</a>
+            <!--<a href="echoes.html">The Threshold of Echoes</a>-->
         </div>
     </div>
 
-  <h1>Video Steganography Tool</h1>
+  <h1>Video Steganography Tool</h1><img src="/fennfox.png" class="center-image" alt=""
+    style="width: 150px; height: auto;">
 
   <!-- Upload Section -->
   <section>
@@ -114,6 +115,7 @@
   <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
   <footer>
         <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
+        <!--<p>Version 1.1 | Contact: <a href="mailto:aeonlogic@protonmail.com">Aeon Logic</a></p>-->
     </footer>
 </body>
 </html>
