--- a/about.html
+++ b/about.html
@@ -27,16 +27,18 @@ Core features include a growing library of encryption and decryption methods com
         <div class="dropdown-content">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
+            <a href="tepcipher.html">Cipher Translator</a>
             <a href="decrypt.html">Encrypt/Decrypt</a>
+            <a href="red.html">Video Steganography</a>
             <a href="cryptography.html">Cryptography</a>
-            <a href="blog.html">Blog</a>
+            <!--<a href="blog.html">Blog</a>-->
             <!--<a href="echoes.html">The Threshold of Echoes</a>-->
         </div>
     </div>
 
     <footer>
         <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
-        <!--<p>Version 1.1 | Contact: <a href="aeonlogic@protonmail.com">Aeon Logic</p>-->
+        <a href="aeonlogic@protonmail.com">Aeon Logic</a>
     </footer>
     
 </body>
