Update navigation links and remove blog link

--- a/decrypt.html
+++ b/decrypt.html
@@ -205,14 +205,17 @@
         <div class="dropdown-content">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
+            <a href="tepcipher.html">Cipher Translator</a>
             <a href="decrypt.html">Encrypt/Decrypt</a>
+            <a href="red.html">Video Steganography</a>
             <a href="cryptography.html">Cryptography</a>
-            <a href="blog.html">Blog</a>
+            <!--<a href="blog.html">Blog</a>-->
             <!--<a href="echoes.html">The Threshold of Echoes</a>-->
         </div>
     </div>
     <footer>
         <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
+        <a href="mailto:aeonlogic@protonmail.com">Aeon Logic</a>
     </footer>
 </body>
 </html>
