--- a/echoes.html
+++ b/echoes.html
@@ -18,11 +18,12 @@
         <div class="dropdown-content">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
+            <a href="tepcipher.html">Cipher Translator</a>
             <a href="decrypt.html">Encrypt/Decrypt</a>
             <a href="red.html">Video Steganography</a>
             <a href="cryptography.html">Cryptography</a>
-            <a href="blog.html">Blog</a>
-            <a href="echoes.html">The Threshold of Echoes</a>
+            <!--<a href="blog.html">Blog</a>-->
+            <!--<a href="echoes.html">The Threshold of Echoes</a>-->
         </div>
     </div>
     <div class="game-container">
@@ -32,7 +33,7 @@
         <ul>Ada always tells the truth.</ul>
         <ul>B25Y tells the truth only when Ada is lying.</ul>
         <ul>Charles answers randomly-truth or lie, you won't know.</ul>
-    You may ask one question to one person only. (The puzzle will automatically reset after 10 seconds, each round will have a new passcode holder.)
+    You may ask one question to one person only. (The puzzle will automatically reset after 10 seconds, and each round will have a new passcode holder.)
     What question will you ask to discover who holds the passcode?
     </p>
 
@@ -64,8 +65,5 @@
     </div>
 
     <script src="echoes.js"></script>
-    <footer>
-        <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
-    </footer>
 </body>
 </html>
