--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-x<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -75,7 +75,7 @@ x<!DOCTYPE html>
             <div class="feature-card" data-keywords="video steganography lsb hidden message frame analysis ocr">
                 <div class="card-icon">◎</div>
                 <h3>Video Steganography</h3>
-                <p>Extract hidden data from video frames. LSB analysis, OCR, and color manipulation tools.</p>
+                <p>Extract hidden data from video frames. LSB analysis, color manipulation tools, and more.</p>
                 <a href="red.html" class="card-link">Enter ⟶</a>
             </div>
 
@@ -91,7 +91,7 @@ x<!DOCTYPE html>
             <div class="feature-card" data-keywords="blog articles writing thoughts philosophy mathematics computation">
                 <div class="card-icon">⊙</div>
                 <h3>Blog</h3>
-                <p>Essays on rationalism, computation, classical music, poetry, and the intersection of art and logic.</p>
+                <p>Insights on rationalism, computation, classical music, poetry, and the intersection of art and logic.</p>
                 <a href="blog.html" class="card-link">Enter ⟶</a>
             </div>
 
