--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="feature-card" data-keywords="about contact aeon logic information">
                 <div class="card-icon">∷</div>
                 <h3>About</h3>
-                <p>Learn about AEON LOGIC and the philosophy behind these cryptographic tools.</p>
+                <p>Learn about the TEP Cipher Translator.</p>
                 <a href="about.html" class="card-link">Enter ⟶</a>
             </div>
         </div>
