--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="card-icon">⌖</div>
                 <h3>Cipher Translator</h3>
                 <p>Translate between the alphabet and the TEP Cipher</p>
-                <a href="index.html" class="card-link">Enter ⟶</a>
+                <a href="tepcipher.html" class="card-link">Enter ⟶</a>
             </div>
 
             <!-- Encrypt/Decrypt Card -->
