--- a/blog.html
+++ b/blog.html
@@ -27,9 +27,11 @@
         <div class="dropdown-content">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
+            <a href="tepcipher.html">Cipher Translator</a>
             <a href="decrypt.html">Encrypt/Decrypt</a>
+            <a href="red.html">Video Steganography</a>
             <a href="cryptography.html">Cryptography</a>
-            <a href="blog.html">Blog</a>
+            <!--<a href="blog.html">Blog</a>-->
             <!--<a href="echoes.html">The Threshold of Echoes</a>-->
         </div>
     </div>
