--- a/red.html
+++ b/red.html
@@ -128,7 +128,7 @@
       <button id="startAnalysisBtn" class="primary-btn" disabled style="margin-top:8px;">
         Start Analysis
       </button>
-      <button id="resetBtn" class="primary-btn" style="margin-top:8px; margin-left:8px; background:#555;">Reset All</button>
+      <button id="resetBtn" class="primary-btn" style="margin-top:8px; margin-left:8px;">Reset All</button>
     
 
     <!-- Single LSB control now handles extraction AND display -->
@@ -190,6 +190,5 @@
   </footer>
 </body>
 </html>
-
 
 
