Update About page content and branding

--- a/about.html
+++ b/about.html
@@ -13,15 +13,12 @@
     <h1>About</h1>
     <br>
     <p>
-        The TEP Cipher Translator is an independent, community-built tool created by solvers, for solvers, with no official affiliation to The End Project (TEP) beyond a shared fascination with its puzzles. Designed to support those navigating the cryptic terrain of TEP, the site offers a suite of utilities tailored to the decoding challenges frequently encountered in the project.
+        The Cryptic-Fox is an independent, community-built tool created by cryptography puzzle solvers, for solvers. The site offers a suite of utilities tailored to the decoding challenges frequently encountered in puzzle-solving projects.
 
-Core features include a growing library of encryption and decryption methods commonly used in TEP clues, a video steganography tool that analyzes frames and extracts least significant bits (LSB), and a curated collection of cryptography resources, including links to courses, external tools, and learning materials. The platform also hosts a blog that reflects on the symbolic, thematic, and technical dimensions uncovered during the solving process.
+Core features include a growing library of encryption and decryption methods, a video steganography tool that analyzes frames and extracts least significant bits (LSB), and a curated collection of cryptography resources, including links to courses, external tools, and learning materials. The platform also hosts a blog that reflects on the symbolic, thematic, and technical dimensions uncovered during the solving process.
     </p>
     <br>
-    <p>
-        To learn more about The End Project visit: <a href="https://theendproject.xyz/">theendproject.xyz</a>
-    </p>
-    <br>
+    
     <div class="dropdown">
         <button class="dropbtn">⨀Ξ〄⋑</button>
         <div class="dropdown-content">
@@ -38,7 +35,7 @@ Core features include a growing library of encryption and decryption methods com
 
     <footer>
         <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
-        <a href="aeonlogic@protonmail.com">Aeon Logic</a>
+        <a href="aeonlogic@protonmail.com">Cryptic-Fox</a>
     </footer>
     
 </body>
