--- a/tepcipher.html
+++ b/tepcipher.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cipher Translator | AEON LOGIC</title>
+    <title>Cipher Translator | ⚲⎐⚷⎔⌖∷⚲ ⌬◎⊗</title>
     <link rel="stylesheet" href="style.css">
 
     <!-- Favicon Links -->
@@ -68,8 +68,9 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
-        <p><a href="mailto:aeonlogic@protonmail.com">Aeon Logic</a></p>
+        <p>&copy; 2025 ⚲⎐⚷⎔⌖∷⚲ ⌬◎⊗</p>
+        <p><a href="mailto:aeonlogic@protonmail.com">Cryptic-Fox</a></p>
     </footer>
 </body>
 </html>
+
