Update footer content in red.html

--- a/red.html
+++ b/red.html
@@ -185,8 +185,8 @@
   <script type="module" src="main.js"></script>
 
   <footer>
-    <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
-    <p><a href="mailto:aeonlogic@protonmail.com">Aeon Logic</a></p>
+    <p>&copy; 2025 ⚲⎐⚷⎔⌖∷⚲ ⌬◎⊗</p>
+    <p><a href="mailto:aeonlogic@protonmail.com">Cryptic-Fox</a></p>
   </footer>
 </body>
 </html>
