Update title and footer content in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>⌖⎐⟒〄Ϩ⌇⟒⌖◎⎐</title>
+    <title>⚲⎐⚷⎔⌖∷⚲ ⌬◎⊗</title>
     <link rel="stylesheet" href="style.css">
 
     <!-- Favicon Links -->
@@ -48,7 +48,7 @@
 
     <!-- Hero Section -->
     <section class="hero-section">
-        <img src="/fennfox.png" class="hero-logo" alt="AEON LOGIC">
+        <img src="/fennfox.png" class="hero-logo" alt="CRYPTIC FOX">
     </section>
 
     <!-- Feature Cards Grid -->
@@ -106,8 +106,8 @@
     </section>
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
-        <a href="mailto:aeonlogic@protonmail.com">Aeon Logic</a>
+        <p>&copy; 2025 ⚲⎐⚷⎔⌖∷⚲ ⌬◎⊗</p>
+        <a href="mailto:aeonlogic@protonmail.com">Cryptic-Fox</a>
     </footer>
     <script>
         // Make entire card clickable
