Update footer content in cryptography.html

--- a/cryptography.html
+++ b/cryptography.html
@@ -65,8 +65,8 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
-        <a href="mailto:aeonlogic@protonmail.com">Aeon Logic</a>
+        <p>&copy; 2025 ⚲⎐⚷⎔⌖∷⚲ ⌬◎⊗</p>
+        <a href="mailto:aeonlogic@protonmail.com">Cryptic-Fox</a>
     </footer>
 </body>
 </html>
