Update footer copyright text in about.html

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@ Core features include a growing library of encryption and decryption methods, a 
     </div>
 
     <footer>
-        <p>&copy; 2025 ⌁⍥◎Ϩ⌖ ∷〄 ⌖⍥Ξ ⨀⟒⚲⍥∷〄Ξ</p>
+        <p>&copy; 2025 ⚲⎐⚷⎔⌖∷⚲ ⌬◎⊗</p>
         <a href="aeonlogic@protonmail.com">Cryptic-Fox</a>
     </footer>
     
