Update About section for clarity
Revised the description of The Cryptic-Fox tool for clarity and conciseness.

--- a/about.html
+++ b/about.html
@@ -13,9 +13,7 @@
     <h1>About</h1>
     <br>
     <p>
-        The Cryptic-Fox is an independent, community-built tool created by cryptography puzzle solvers, for solvers. The site offers a suite of utilities tailored to the decoding challenges frequently encountered in puzzle-solving projects.
-
-Core features include a growing library of encryption and decryption methods, a video steganography tool that analyzes frames and extracts least significant bits (LSB), and a curated collection of cryptography resources, including links to courses, external tools, and learning materials. The platform also hosts a blog that reflects on the symbolic, thematic, and technical dimensions uncovered during the solving process.
+        The Cryptic-Fox is an independent web tool created to support cryptography puzzle solvers by providing a suite of utilities for decoding complex clues. Key features include a growing library of encryption and decryption methods, along with a curated collection of cryptography resources such as courses, external tools, and learning materials, helping solvers navigate cryptographic challenges.
     </p>
     <br>
     
