--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <h1>About</h1>
     <br>
     <p>
-        The Cryptic-Fox is an independent web tool created to support cryptography puzzle solvers by providing a suite of utilities for decoding complex clues. Key features include a growing library of encryption and decryption methods, along with a curated collection of cryptography resources such as courses, external tools, and learning materials, helping solvers navigate cryptographic challenges.
+        Cryptic-Fox is a web tool created to support cryptography puzzle solvers by providing a suite of utilities for decoding complex clues. Key features include a growing library of encryption and decryption methods, along with a curated collection of cryptography resources such as courses, external tools, and learning materials, helping solvers navigate cryptographic challenges.
     </p>
     <br>
     
